--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "description": "Server side for a meal booking Application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"nodemon --exec babel-node index.js"
+
   },
   "repository": {
     "type": "git",
@@ -22,5 +24,17 @@
   "bugs": {
     "url": "https://github.com/fxola/Booka/issues"
   },
-  "homepage": "https://github.com/fxola/Booka#readme"
+  "homepage": "https://github.com/fxola/Booka#readme",
+  "dependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "babel-cli": "^6.26.0",
+    "express": "^4.16.4"
+  },
+  "devDependencies": {
+    "eslint": "^5.13.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "nodemon": "^1.18.10"
+  }
 }
