setup test dependencies and tested theapp root endpoint

--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,9 @@
   "description": "Server side for a meal booking Application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha src/tests/*.js --require @babel/register --timeout 10000 --exit || true",
     "start": "nodemon --exec babel-node src/index.js",
-    "build":"babel src -d dist"
+    "build": "babel src -d dist"
   },
   "repository": {
     "type": "git",
@@ -34,6 +34,9 @@
     "@babel/core": "^7.3.3",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
+    "@babel/register": "^7.0.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.1",
     "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-airbnb-base": "^13.1.0",
@@ -42,6 +45,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.11.0",
+    "mocha": "^6.0.0",
     "nodemon": "^1.18.10",
     "prettier": "^1.16.4"
   }
