wrote test for GET /meals

--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "Server side for a meal booking Application",
   "main": "index.js",
   "scripts": {
-    "test": "mocha src/tests/*.js --require @babel/register --timeout 10000 --exit || true",
+    "test": "mocha src/tests/*.js --require @babel/register || true",
+    "test-watch": "nodemon --exec \"npm test\"",
     "start": "nodemon --exec babel-node src/index.js",
     "build": "babel src -d dist"
   },
