--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,28 @@ language: node_js
 node_js:
   - "node"
 
+env:
+  global: CODECLIMATE_REPO_TOKEN=18a1ef62f5eefa7e7c6b2f9742e30560ddbe8f0339b98dd8c28332355d86122a
+
 install:
   - cd server
   - npm install
 
 test:
   - npm test
+
+cache:
+  directories:
+    - "server/node_modules"
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+script:
+  - npm run coverage
+after_success:
+  - npm run coverage
+  - npm install codeclimate-test-reporter
+  - codeclimate-test-reporter < coverage/lcov.info
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
