--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "test": "mocha server/src/tests/*.js --require @babel/register --exit || true",
     "test-watch": "nodemon --exec \"npm test\"",
     "start": "nodemon --exec babel-node server/src/index.js",
-    "build": "npm run clean && node server/dist/index",
-    "clean": "rm -rf dist &&  babel server/src -d server/dist",
+    "babel-build": "babel server/src -d server/dist",
+    "clean": "rm -rf dist && mkdir dist",
+    "build": "npm run clean && npm run babel-build",
     "generate-lcov": "nyc report --reporter=text-lcov > lcov.info",
     "coveralls-coverage": "coveralls < lcov.info",
     "codeclimate-coverage": "codeclimate-test-reporter < lcov.info",
