--- a/package.json
+++ b/package.json
@@ -34,14 +34,15 @@
   "homepage": "https://github.com/fxola/Booka#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "^4.16.4"
-  },
-  "devDependencies": {
+    "express": "^4.16.4",
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.3",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
-    "@babel/register": "^7.0.0",
+    "@babel/register": "^7.0.0"
+  },
+  "devDependencies": {
+    
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
     "codeclimate-test-reporter": "^0.5.1",
